jitfailure-dolfin_expression_05e67b3d49c6ee62862d5230affce702/error.log
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmptk4e7_2f/dolfin_expression_05e67b3d49c6ee62862d5230affce702.cpp:63:31: error: no matching function for call to 'log'
          values[0] = - (10 / log(b/a)) * log(x0/a) + 10;
                              ^~~
/Users/emmanuelflores/miniconda3/envs/fenics/include/dolfin/log/log.h:103:8: note: candidate function not viable: requires at least 2 arguments, but 1 was provided
  void log(int debug_level, std::string msg, ...);
       ^
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmptk4e7_2f/dolfin_expression_05e67b3d49c6ee62862d5230affce702.cpp:63:29: error: invalid operands to binary expression ('int' and 'void')
          values[0] = - (10 / log(b/a)) * log(x0/a) + 10;
                         ~~ ^ ~~~~~~~~
/var/folders/d_/kgfl6g_j6fj9v6p9j75gh8_w0000gn/T/tmptk4e7_2f/dolfin_expression_05e67b3d49c6ee62862d5230affce702.cpp:63:47: error: use of undeclared identifier 'x0'
          values[0] = - (10 / log(b/a)) * log(x0/a) + 10;
                                              ^
3 errors generated.
